force-app/main/default/objects/Questionnaire_for_Opportunity__c/Questionnaire_for_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Questionnaire for Opportunity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire for Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>