force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Additional_service__c.field-meta.xml
<CustomField>
    <fullName>Additional_service__c</fullName>
    <label>Additional service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office space</fullName>
            </value>
            <value>
                <fullName>Meeting room</fullName>
            </value>
            <value>
                <fullName>Storeroom</fullName>
            </value>
            <value>
                <fullName>Parking Space</fullName>
            </value>
            <value>
                <fullName>Rooftop Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>