force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/In_how_many_phases_the_deployment_will_b__c.field-meta.xml
<CustomField>
    <fullName>In_how_many_phases_the_deployment_will_b__c</fullName>
    <label>#phases the deployment will be done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>