force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Network_Support__c.field-meta.xml
<CustomField>
    <fullName>Network_Support__c</fullName>
    <label>Network Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single mode Fibre Cable</fullName>
            </value>
            <value>
                <fullName>Double mode Fibre Cable</fullName>
            </value>
            <value>
                <fullName>UTP Copper Cable</fullName>
            </value>
            <value>
                <fullName>FTP Copper Cable</fullName>
            </value>
            <value>
                <fullName>Cross Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>