force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/One_time_deliverable__c.field-meta.xml
<CustomField>
    <fullName>One_time_deliverable__c</fullName>
    <label>One-time deliverable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mesh Cage</fullName>
            </value>
            <value>
                <fullName>Opaque Cage</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>Biometric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>