force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Questionnaire for Opportunities</relationshipLabel>
    <relationshipName>Questionnaire_for_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>