force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Patch_Cord__c.field-meta.xml
<CustomField>
    <fullName>Patch_Cord__c</fullName>
    <label>Patch Cord</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single mode</fullName>
            </value>
            <value>
                <fullName>Multimode</fullName>
            </value>
            <value>
                <fullName>No Patch cord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>