force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Power_Type__c.field-meta.xml
<CustomField>
    <fullName>Power_Type__c</fullName>
    <label>Power Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rated Power</fullName>
            </value>
            <value>
                <fullName>Consumed Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>