force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Rack_Cabinet__c</fullName>
    <label>Rack Cabinet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>