force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_density_Rated_power_per_Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack_density_Rated_power_per_Rack__c</fullName>
    <label>Rack density / Rated power per Rack</label>
    <type>TextArea</type>
</CustomField>