force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Rack_Footprint__c</fullName>
    <label>Rack Footprint</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>600mm x 1200mm</fullName>
            </value>
            <value>
                <fullName>800mm x 1200mm</fullName>
            </value>
            <value>
                <fullName>600mm x 1000mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>