force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_Height__c.field-meta.xml
<CustomField>
    <fullName>Rack_Height__c</fullName>
    <label>Rack Height</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>42U</fullName>
            </value>
            <value>
                <fullName>45U</fullName>
            </value>
            <value>
                <fullName>48U</fullName>
            </value>
            <value>
                <fullName>52U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>