force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_PDU__c.field-meta.xml
<CustomField>
    <fullName>Rack_PDU__c</fullName>
    <label>Rack PDU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Phase</fullName>
            </value>
            <value>
                <fullName>Three Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>