force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_PDU_Single_Phase_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Rack_PDU_Single_Phase_Configuration__c</fullName>
    <inlineHelpText>Configuration (No. of IEC Sockets (C19 &amp; C13) + No. of Indian Sockets)</inlineHelpText>
    <label>Rack PDU Single Phase Configuration</label>
    <type>TextArea</type>
</CustomField>