force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Rack_Type__c.field-meta.xml
<CustomField>
    <fullName>Rack_Type__c</fullName>
    <label>Rack Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Server Rack</fullName>
            </value>
            <value>
                <fullName>Network Rack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>