force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Request_for_Service_Date_RFS__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Service_Date_RFS__c</fullName>
    <label>Request for Service Date (RFS)</label>
    <type>Date</type>
</CustomField>