force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Space_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Space_Requirement__c</fullName>
    <label>Space Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated Suit</fullName>
            </value>
            <value>
                <fullName>Sharing space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>