force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/STS__c.field-meta.xml
<CustomField>
    <fullName>STS__c</fullName>
    <label>STS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Phase</fullName>
            </value>
            <value>
                <fullName>Three Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>