force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Total_Power_KW__c.field-meta.xml
<CustomField>
    <fullName>Total_Power_KW__c</fullName>
    <label>Total Power (KW)</label>
    <type>TextArea</type>
</CustomField>