force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/Total_Rack_quantity_No__c.field-meta.xml
<CustomField>
    <fullName>Total_Rack_quantity_No__c</fullName>
    <label>Total Rack quantity (No.)</label>
    <type>TextArea</type>
</CustomField>