force-app/main/default/objects/Questionnaire_for_Opportunity__c/fields/UPS_supply__c.field-meta.xml
<CustomField>
    <fullName>UPS_supply__c</fullName>
    <label>UPS supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>